--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -8,6 +8,7 @@
 
 {% block header %}
   {% include "./header.njk" %}
+  {% include "../partials/phaseBanner.njk" %}
 {% endblock %}
 
 {% block bodyStart %}
