Add padding between search and filter divs
Add padding between search and filter divs
Remove unused code in utils/datePickerUtils
Pass request id to transaction link

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -9,6 +9,6 @@ $govuk-page-width: $moj-page-width;
 
 @import './components/header-bar';
 @import './components/card';
-@import './components/filter';
+@import './components/filters';
 @import './overrides/local';
 
