--- a/assets/scss/overrides/_local.scss
+++ b/assets/scss/overrides/_local.scss
@@ -27,3 +27,13 @@ $button-shadow-size: 2px;
     }
   }
 }
+
+.govuk-form-group {
+  .govuk-input {
+    margin-bottom: 30px;
+  }
+}
+
+.moj-search__button {
+  margin-bottom: 30px !important;
+}
