--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -9,4 +9,5 @@ $govuk-page-width: $moj-page-width;
 
 @import './components/header-bar';
 @import './components/card';
+@import './components/json-viewer';
 @import './overrides/local';
