--- a/server/views/pages/index.njk
+++ b/server/views/pages/index.njk
@@ -15,7 +15,7 @@
 <div class="card-group govuk-grid-row">
   <div class="govuk-grid-column-one-third card-group__item">
     {{ card({
-      "href": "/audit-history",
+      "href": "/audit",
       "clickable": "true",
       "heading": "View audit history",
       "description": "View captured synchronisation history. Filter logs by date and prison to audit synchronised transactions.",
