Some lint fixes and tidy up
Some lint fixes and tidy up

--- a/server/views/pages/audit/history.njk
+++ b/server/views/pages/audit/history.njk
@@ -93,7 +93,7 @@
           </div>
 
           {% set rows = [] %}
-          {% for row in tableData %}
+          {% for row in payloadSummaryData %}
             {% set rows = (rows.push({
               items: [
                 { text: row.legacyTransactionId },
