Changes around router structure
Changes around router structure, so we get the query params in the URL
And some other fixes for JS files.

--- a/server/views/pages/audit/history.njk
+++ b/server/views/pages/audit/history.njk
@@ -15,7 +15,10 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="post">
+
+      <h1 class="govuk-heading-l">NOMIS Sync transaction history</h1>
+
+      <form method="POST">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
         <input type="hidden" name="dateFrom" value="{{ dateFrom | isoDateToDatePickerDate }}" />
         <input type="hidden" name="dateTo" value="{{ dateTo | isoDateToDatePickerDate }}" />
