--- a/server/views/pages/audit/history.njk
+++ b/server/views/pages/audit/history.njk
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-  <div class="govuk-grid-row">
+  <div class="govuk-grid-row audit-history-page">
     <div class="govuk-grid-column-two-thirds">
 
       <p>{{ legacyTransactionId }}</p>
@@ -124,9 +124,9 @@
                 { text: row.transactionTimestamp },
                 { text: row.requestTypeIdentifier },
                 {
-                  html: '<a class="govuk-link" href="/audit/' 
-                          + row.requestId 
-                          + '">View</a>' 
+                  html: '<a class="govuk-link" href="/audit/'
+                          + row.requestId
+                          + '">View</a>'
                 }
               ]
             }), rows) %}
