--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -10,4 +10,6 @@ $govuk-page-width: $moj-page-width;
 @import './components/header-bar';
 @import './components/card';
 @import './components/json-viewer';
+@import './components/audit-history';
 @import './overrides/local';
+
